--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+
 # Prerequisites
 *.d
 
@@ -50,3 +64,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# MacOS
+.DS_Store
+
+# Build directory
+build/
